Scrollbar fixes

--- a/src/bootstrap/_customizations.css
+++ b/src/bootstrap/_customizations.css
@@ -9,6 +9,7 @@
 
 *::-webkit-scrollbar {
   width: var(--btcpay-scrollbar-width);
+  height: var(--btcpay-scrollbar-width);
 }
 
 *::-webkit-scrollbar-track {
